examples/test/testpolicy8696.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8696
  namespace: namespace410
spec:
  podSelector:
    matchLabels:
      key8: value8
      key31: value21
      key2: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value43
          key28: value46
      podSelector:
        matchLabels:
          key42: value31
          key13: value4
          key37: value38
